Passing Assembler Interpreter Kata